[package]
name = "sdf2mesh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["shadertoy"]
shadertoy = [
    "dep:naga",
    "dep:reqwest",
    "dep:serde",
    "dep:serde_json",
    "dep:tokio",
]

[dependencies]
bytemuck = "1.14.0"
clap = { version = "4.5", features = ["derive", "cargo"] }
common_macros = "0.1.1"
encase = "0.10"
env_logger = "0.11.3"
euclid = "0.22.9"
futures-intrusive = "0.5"
lazy_static = "1.4.0"
log = "0.4"
nalgebra = "0.33"
png = "0.17.10"
pollster = "0.4"
wgpu = "23.0.1"

# Required for shadertoy feature
naga = { version = "23.1.0", features = [
    "glsl-in",
    "wgsl-out",
], optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }
serde_json = { version = "1.0", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
tokio = { version = "1.0", default-features = false, features = [
    "macros",
    "rt-multi-thread",
], optional = true }


[[bin]]
name = "sdf2mesh"
